reservation station done

--- a/TomasuloSimulation/TomasuloSimulation.vcxproj
+++ b/TomasuloSimulation/TomasuloSimulation.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="Instruction_Unit.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Reservation_Station.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instruction_Unit.h" />
+    <ClInclude Include="Reservation_Station.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
