--- a/TomasuloSimulation/TomasuloSimulation.vcxproj.filters
+++ b/TomasuloSimulation/TomasuloSimulation.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Instruction_Unit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Reservation_Station.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instruction_Unit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Reservation_Station.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
